<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_text_title"
        android:textAlignment="center"
        android:textColor="#7A278F"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_code"
        android:inputType="number"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_lastname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_phone"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonInsert"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClicButtonInsert"
        android:text="@string/button_text_insert" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:onClick="onClicButtonSearch"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_text_seacrh" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:onClick="onClicButtonDelete"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_text_delete" />

    <Button
        android:id="@+id/buttonModify"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:onClick="onClicButtonUpdate"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_text_modify" />

</LinearLayout>